crates/ars-collections/tests/ui/tab_key_discriminant_overflow.rs
use ars_collections::TabKey;

#[derive(TabKey)]
#[tab_key(discriminant)]
enum BadTab {
    Profile = 18446744073709551616,
}

fn main() {}
